--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>Calculadora de Derivadas Algebraicas</title>
 </head>
 <body>
+    div.a {
+	text-align: center;
+
 <body style="background-color:lavender;">
     <h1>Calculadora de Derivadas</h1>
 <p style="color:midnightblue;">
@@ -30,6 +33,7 @@
     </script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.js"></script>
-<img src="istockphoto-521203614-612x612.jpg">
+    }
+>
 </body>
 </html>
