--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Calculadora de Derivadas Algebraicas</title>
+    <title><center>Calculadora de Derivadas Algebraicas</center></title>
 </head>
 <body>
     div.a {
 	text-align: center;
-
+<center>
 <body style="background-color:lavender;">
     <h1>Calculadora de Derivadas</h1>
 <p style="color:midnightblue;">
@@ -34,6 +34,8 @@
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.js"></script>
     }
+</center>
+</div>
 >
 </body>
 </html>
