--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title><center>Calculadora de Derivadas Algebraicas</center></title>
 </head>
 <body>
-    div.a {
+    div.a 
 	text-align: center;
 <center>
 <body style="background-color:lavender;">
@@ -33,7 +33,7 @@
     </script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.js"></script>
-    }
+    
 </center>
 </div>
 >
