--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><center>Calculadora de Derivadas Algebraicas</center></title>
+    <title>Calculadora de Derivadas Algebraicas</title>
 </head>
 <body>
-    div.a 
-	text-align: center;
+   
 <center>
 <body style="background-color:lavender;">
     <h1>Calculadora de Derivadas</h1>
@@ -35,7 +34,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.js"></script>
     
 </center>
-</div>
 >
 </body>
 </html>
