--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    
 <center>
 <body style="background-color:lavender;">
-    <h1>Calculadora de Derivadas</h1>
+    <h1>Calculadora de Derivadas Algebraicas</h1>
 <p style="color:midnightblue;">
     
     <label for="funcion">Función:</label>
@@ -28,6 +28,7 @@
         }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.js"></script>  
+    <img src="monos/mono.png"alt">
 </center>
 
 </body>
