--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         }
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.6.0/math.js"></script>  
-    <img src="Monitos/Mono.png"alt">
+    <img src="Monitos/Mono.png">
 </center>
 
 </body>
